@@ -1,3 +1,7 @@
+Fri Sep 29 10:35:10 BST 2000 Chris Emerson <chris.emerson@open.muscat.com>
+
+	* Removed testnodes.h, which is obsolete and broke includetest.
+
 Thu Sep 28 19:12:00 BST 2000  Richard Boulton <richard.boulton@open.muscat.com>
 
 	* Add files containing generic utilities needed for quartz.
